Fix axios baseURL env and fix overflow

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -23,6 +23,7 @@ html,
 body,
 #root {
   min-width: 100%;
+  overflow-x: hidden;
 }
 
 body,
